@@ -1827,7 +1827,8 @@ AAC (.m4a)</property>
 Low
 Normal
 High
-Very High</property>
+Very High
+Insanely High</property>
 				  <property name="add_tearoffs">False</property>
 				  <property name="focus_on_click">True</property>
 				  <signal name="changed" handler="on_vorbis_quality_changed"/>
